fix: use bounded executor for reconciliation in event handlers & optimize env var values (#175)
(cherry picked from commit 18ddb55a0bf8a7866c79fd8803f37a532ae00fb3)