@@ -4,14 +4,28 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
+import java.util.concurrent.LinkedBlockingQueue;
+import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.TimeUnit;
 
 @Configuration
 public class ExecutorServiceConfiguration {
 
-    @Bean("k8s-service-readiness-checker")
-    public ExecutorService componentCleanerExecutor() {
-        return Executors.newCachedThreadPool(r -> new Thread(r, "k8s-service-readiness-checker-thread-pool"));
-    }
+    @Bean(name = "k8s-service-readiness-checker", destroyMethod = "shutdown")
+    public ExecutorService k8sServiceReadinessCheckerExecutor(ReconciliationExecutorProperties properties) {
+        var queue = new LinkedBlockingQueue<Runnable>(properties.getQueueCapacity());
+        var threadFactory = Thread.ofPlatform()
+                .name(properties.getThreadNamePrefix() + "-", 1)
+                .factory();
 
+        return new ThreadPoolExecutor(
+                properties.getThreadPoolSize(),
+                properties.getThreadPoolSize(),
+                0L,
+                TimeUnit.MILLISECONDS,
+                queue,
+                threadFactory,
+                new ThreadPoolExecutor.CallerRunsPolicy()
+        );
+    }
 }
